src/styles.css
* {
  box-sizing: border-box;
}

html,
body {
  overscroll-behavior-y: contain;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  user-select: none;
  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial,
    sans-serif;
  position: fixed;
  overflow: hidden;
}

#root {
  background: #466b7f;
  position: fixed;
  overflow: hidden;
  width: 100%;
  height: 100%;
  cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39, auto;
  color: #d4af37;
}

#root.correct-flash {
  background: darkgreen;
}

#root.incorrect-flash {
  background: darkred;
}

#root > div {
  position: absolute;
  width: 100vw;
  height: 100vh;
  will-change: transform;
  display: flex;
  align-items: center;
  justify-content: center;
}

#root > div > div {
  background-color: #263349;
  background-size: auto 85%;
  background-repeat: no-repeat;
  background-position: center center;
  width: 45vh;
  max-width: 300px;
  height: 85vh;
  max-height: 570px;
  will-change: transform;
  border-radius: 10px;
  box-shadow: 0 12.5px 175px -10px rgba(20, 20, 43, 0.4), 0 10px 10px -10px rgba(60, 60, 83, 0.1);
}

/**** Menu styling ****/
.player-menu {
  height: 64px!important;
  background-color: black;
  z-index: 200;
}

button {

  border-radius: 6px;
  border-color: #d4af37;
  background-color: #d4af37;
}

.player-menu > button {
  margin: 0 12px;
  padding: 12px 12px;
  font-size: 0.65rem;
}

/**** Card-specific styling ****/
.card {
  display: flex;           /* establish flex container */
  flex-direction: column;  /* make main axis vertical */
  justify-content: center; /* center items vertically, in this case */
  align-items: center;     /* center items horizontally, in this case */

  width: 100%;
  height: 100%;
}

.card .card-main {
  width: 100%;
  text-align: center;
  font-size: 4rem;
  margin-top: 0;
}

.card .card-subtitle {
  width: 100%;
  text-align: center;
  font-size: 1.5rem;
  margin-bottom: 0;
}

.card .card-option {
  font-size: 1.25rem;
  max-width: 50%;
}

.options-menu {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: no-content; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

.options-menu-content {
  background-color: #fefefe;
  margin: 35% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  height: 75vh!important;
  width: 80%; /* Could be more or less, depending on screen size */
  vertical-align: middle;
}

.options-menu-content > button {
  width: 100%;
  padding: 18px 18px;
  font-size: 0.85rem;
}


.u-colour-gold {
  color: #d4af37;
}

svg {
  fill: #d4af37;
  stroke: #d4af37;
}

